@@ -251,6 +251,12 @@ $messages = array(
 	'nopassword' => array(
 		'message' => __('You are not allowed to change your password.'),
 		'type' => 'error'),
+	'nopasswordlen' => array(
+		'message' => __('Unable to determine size of password field, please check permissions of db user'),
+		'type' => 'error'),
+	'nopasswordinc' => array(
+		'message' => __('Unable to increase size of password field, pleas check permission of db user'),
+		'type' => 'error'),
 	'nodomainpassword' => array(
 		'message' => __('LDAP/AD based password change not supported.'),
 		'type' => 'error'),
@@ -1007,6 +1013,7 @@ $user_auth_realms = array(
 	1    => __('User Management'),
 	15   => __('Settings and Utilities'),
 	23   => __('Automation Settings'),
+	26   => __('Installation And Upgrades'),
 
 	2    => __('Data Input Methods'),
 	13   => __('Data Queries'),
@@ -1037,7 +1044,7 @@ $user_auth_roles = array(
 	'Normal User'            => array(7, 19, 20, 22, 24, 25),
 	'Template Editor'        => array(8, 2, 9, 10, 11, 12, 13, 14, 16, 17),
 	'General Administration' => array(8, 3, 4, 5, 23, 1043),
-	'System Administration'  => array(8, 15, 1, 18, 21, 101)
+	'System Administration'  => array(8, 15, 26, 1, 18, 21, 101)
 );
 
 $user_auth_realm_filenames = array(
@@ -1068,7 +1075,8 @@ $user_auth_realm_filenames = array(
 	'host.php' => 3,
 	'host_templates.php' => 12,
 	'index.php' => 8,
-	'step_json.php' => 8,
+	'install.php' => 26,
+	'step_json.php' => 26,
 	'managers.php' => 15,
 	'rrdcleaner.php' => 15,
 	'settings.php' => 15,
