@@ -39,6 +39,7 @@
 		<ifAlias>
 			<name>Alias (IF-MIB)</name>
 			<method>walk</method>
+			<output_format>ascii</output_format>
 			<source>value</source>
 			<direction>input</direction>
 			<oid>.1.3.6.1.2.1.31.1.1.1.18</oid>
@@ -46,6 +47,7 @@
 		<ifType>
 			<name>Type</name>
 			<method>walk</method>
+			<output_format>ascii</output_format>
 			<source>value</source>
 			<direction>input</direction>
 			<oid>.1.3.6.1.2.1.2.2.1.3</oid>
